--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <div id="miniCircle"></div>
+    
+        <div id="miniCircle"></div>
+    
     <div id="main">
         <div id="hero">
             <div id="nav">
@@ -35,26 +37,23 @@
                 </div>
             </div>
 
-            <div class="footer">
-                <div class="left">
-                    <a href="#">currently studying at Gujarat Uni <i class="ri-arrow-right-up-line"></i></a>
-                    <h4>Student of mca</h4>
-                </div>
+            <div class="herofooter">
+                    <div class="bounding">
+                        <a class="boundingElem" href="#">currently studying at Gujarat Uni <i class="ri-arrow-right-up-line"></i></a>
+                    </div>
+                    <div class="bounding">
+                        <h4 class="boundingElem">Student of mca</h4>
+                    </div>
 
-                <div class="right">
+
                     <div class="bounding">
                         <h4 class="boundingElem">available for freelance</h4>
-                    </div>
-                    <div class="bounding">
                         <h4 class="boundingElem">work from february 24'</h4>
+                        <div class="forCir">
+                            <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                            <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                        </div>
                     </div>
-
-                    <div class="forCir">
-                        <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                        <div class="circle"><i class="ri-arrow-down-line"></i></div>
-                    </div>
-
-                </div>
 
             </div>
         </div>
